--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,6 +1,6 @@
 FROM python:latest
-WORKDIR /
+WORKDIR /code
 ADD requirements.txt requirements.txt
 RUN pip install -r requirements.txt
 COPY app.py app.py
-CMD ["python", "-u", "app.py"]
+CMD ["python","app.py"]
